--- a/pom.xml
+++ b/pom.xml
@@ -9,15 +9,26 @@
     <version>1.0-SNAPSHOT</version>
 
     <properties>
-        <junit-version>4.12</junit-version>
         <surefire-version>2.19.1</surefire-version>
+        <suiteFile>suites/TestSuite.xml</suiteFile>
+        <junit-version>4.12</junit-version>
     </properties>
 
     <dependencies>
         <dependency>
+            <groupId>org.testng</groupId>
+            <artifactId>testng</artifactId>
+            <version>6.10</version>
+        </dependency>
+        <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>${junit-version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-api</artifactId>
+            <version>RELEASE</version>
         </dependency>
     </dependencies>
 
@@ -27,6 +38,11 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>${surefire-version}</version>
+                <configuration>
+                    <suiteXmlFiles>
+                        <suiteXmlFile>${suiteFile}</suiteXmlFile>
+                    </suiteXmlFiles>
+                </configuration>
             </plugin>
         </plugins>
     </build>
