--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,11 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>${surefire-version}</version>
+                <configuration>
+                    <includes>
+                        <include>com.playtika.suites.Regression.java</include>
+                    </includes>
+                </configuration>
             </plugin>
         </plugins>
     </build>
